--- a/doc/README
+++ b/doc/README
@@ -1,6 +1,7 @@
 Gnosis
 
 Copyright (c) 2014 Gnosis Developers
+Copyright (c) 2014 Shadowcoin Developers
 Copyright (c) 2014 BlackCoin Developers
 Copyright (c) 2013 NovaCoin Developers
 Copyright (c) 2011-2012 PPCoin Developers
